--- a/practice_3/pubspec.yaml
+++ b/practice_3/pubspec.yaml
@@ -28,8 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  http: ^1.2.2
   flutter:
     sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
